--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
     <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 
     <link rel="stylesheet" href="style.css" />
@@ -40,9 +39,16 @@
             <div id="juegosGanados">0</div>
           </div>
         </div>
-
-        <input type="text" class="entrada" value="0" min="1" max="10" disabled />
-
+        <div class="containerInput">
+          <input
+            type="text"
+            class="entrada"
+            value="0"
+            min="1"
+            max="10"
+            disabled
+          />
+        </div>
         <div class="containerGanadosPerdidos">
           <p>Juegos Perdidos</p>
           <div class="containerContador">
@@ -57,21 +63,18 @@
 
     <div class="divSalida">
       <div class="botonesNumeros">
-      <button class="numero">1</button>
-      <button class="numero">2</button>
-      <button class="numero">3</button>
-      <button class="numero">4</button>
-      <button class="numero">5</button>
-      <button class="numero">6</button>
-      <button class="numero">7</button>
-      <button class="numero">8</button>
-      <button class="numero">9</button>
-      <button class="numero">10</button>
+        <button class="numero">1</button>
+        <button class="numero">2</button>
+        <button class="numero">3</button>
+        <button class="numero">4</button>
+        <button class="numero">5</button>
+        <button class="numero">6</button>
+        <button class="numero">7</button>
+        <button class="numero">8</button>
+        <button class="numero">9</button>
+        <button class="numero">10</button>
       </div>
       <h2 class="salida"></h2>
-
-      <h1 class="ganaste"></h1>
-      <h1 class="salidaGanadorPerdedor"></h1>
     </div>
 
     <script src="numeroSecreto.js"></script>
