--- a/index.html
+++ b/index.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Daniel Alabarze" />
+  <meta name="description" content="Numero Secreto" />
+  <meta name="keywords" content="Alabarze Daniel, Número Secreto; front end developer, desarrollo web, HTML, CSS, JavaScript, React" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Numero Secreto" />
+  <meta property="og:type" content="website" />
+  <meta property="og:description" content="Adiviná el Número Secreto" />
+  <meta property="og:image" content="https://danielalabarze.github.io/MUMERO-SECRETO-SIN-TECLADO/img/logoPregunta.jpg" />
+  <meta property="og:url" content="https://danielalabarze.github.io/MUMERO-SECRETO-SIN-TECLADO/" />
+  <title>Numero Secreto</title>
+  <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48" href="https://danielalabarze.github.io/MUMERO-SECRETO-SIN-TECLADO/img/logoPregunta.jpg" />
+  <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+  <link rel="stylesheet" href="style.css" />
+  <meta http-equiv="content-language" content="es">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Numero Secreto">
+  <meta name="twitter:description" content="Adiviná el Número Secreto">
+  <meta name="twitter:image" content="https://danielalabarze.github.io/MUMERO-SECRETO-SIN-TECLADO/img/logoPregunta.jpg">
+  <meta name="twitter:url" content="https://danielalabarze.github.io/MUMERO-SECRETO-SIN-TECLADO/">
+  <link rel="canonical" href="https://danielalabarze.github.io/MUMERO-SECRETO-SIN-TECLADO/">
+</head>
+
+
+
+
+
+
+
+
+  <!-- <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Daniel Alabarze" />
     <meta name="description" content="Numero Secreto" />
+
     <meta
       name="keywords"
       content="Alabarze Daniel, Número Secreto; front end developer, desarrollo web, HTML, CSS, JavaScript, React"
     />
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Numero Secreto" />
+
+    <meta property="og:type" content="website" />
+
+    <meta property="og:description" content="Adiviná el Número Secreto" />
+    <meta property="og:image" content="./img/logoPregunta.jpg" />
+    <meta
+      property="og:url"
+      content=" https://danielalabarze.github.io/MUMERO-SECRETO-SIN-TECLADO/"
+    />
+    <title>Numero Secreto</title>
     <link
       rel="shortcut icon"
       sizes="16x16 24x24 32x32 48x48"
@@ -22,8 +67,11 @@
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 
     <link rel="stylesheet" href="style.css" />
-    <title>Numero Secreto</title>
-  </head>
+  </head> -->
+
+
+
+  
   <body class="body">
     <div class="containerTitulo">
       <h1 class="titulo">Adiviná el Número Secreto</h1>
